# Oceanside_backend

./: .env.example  .gitignore  Dockerfile  PRESIGNED_URL_TESTING.md  VIDEO_PROCESSING_FLOW_IMPLEMENTATION.md  alembic.ini  cleanup_sessions.py  commands.txt  cors-policy.json  docker-compose.yml  env.example  newArch.md  pyproject.toml  pytest.ini  readme.md  requirements.txt  setup_cors_simple.py  simple_socketio_test.py  start_dev.sh  stop_dev.sh  test_celery_setup.py  test_presigned_urls_manual.py  test_session_management.py  uploadandsessionmanagerupdate.md
alembic/: env.py
alembic/versions/: 18c9e32b0ecf_create_recordings_schema_with_enum.py
app/: main.py
app/agents/: README.md  __init__.py  agents.py  crew.py  tasks.py
app/api/: dependencies.py  router.py  simple_socketio.py  socketio_server.py  websockets.py
app/api/endpoints/: crewai.py  health.py  metrics.py  recordings.py  sessions.py
app/api/routes/: crewai.py
app/core/: __init__.py  celery_app.py  config.py  crewai_config.py  deps.py  exceptions.py  logging.py  middleware.py  request_tracker.py
app/crud/: base.py
app/db/: base.py  session.py
app/models/: __init__.py  base.py  recording.py  session.py
app/schemas/: __init__.py  base.py  health.py  recording.py  session.py
app/services/: health_service.py  r2_storage.py  recording_service.py  session_service.py
app/tasks/: video_processing.py
scripts/: setup_r2_cors.py
tests/: conftest.py  test_health.py  test_middleware.py  test_presigned_urls.py  test_recordings.py  test_socketio.py
uploads/recordings/5737dac2-6b7c-4044-a065-feb490258d52/host/: chunk-1.webm  chunk-10.webm  chunk-2.webm  (+9 more)
