[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-backend-template"
version = "0.1.0"
description = "A template FastAPI application with database integration"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "asyncpg>=0.28.0",
    "sqlalchemy>=2.0.0",
    "greenlet>=2.0.0",
    "alembic>=1.12.0",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
    "structlog>=23.1.0",
    "python-dotenv>=1.0.0",
    "email-validator>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.2",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "pytest-mock>=3.11.1",
]
dev = [
    "black>=23.9.1",
    "ruff>=0.0.290",
    "mypy>=1.5.1",
    "pre-commit>=3.4.0",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = []
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "alembic",
    "dist",
]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | alembic
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto" 